syntax = "proto3";

package v1;

import "tagger/tagger.proto";

option go_package = "./v1;v1_pb";

message SearchUsersRequest {
    string q = 1 [(tagger.tags) = "form:\"q\" binding:\"required\" label:\"q\""];
}

message SearchUserResponse {
    message Item {
        int32 id = 1 [(tagger.tags) = "json:\"id\""];
        string username = 2 [(tagger.tags) = "json:\"username\""];
        string avatar = 3 [(tagger.tags) = "json:\"avatar\""];
        string name = 4 [(tagger.tags) = "json:\"name\""];
        string surname = 5 [(tagger.tags) = "json:\"surname\""];
    }

    repeated Item items = 1  [(tagger.tags) = "json:\"items\""];
}

message SearchGroupChatsRequest {
    int32 page = 1 [(tagger.tags) = "form:\"page\" binding:\"required\" label:\"page\""];
    string name = 2 [(tagger.tags) = "form:\"name\" binding:\"max=50\" label:\"name\""];
}

message SearchGroupChatsResponse {
    message Item {
        int32 id = 1 [(tagger.tags) = "json:\"id\""];
        int32 type = 2 [(tagger.tags) = "json:\"type\""];
        string name = 3 [(tagger.tags) = "json:\"name\""];
        string avatar = 4 [(tagger.tags) = "json:\"avatar\""];
        string description = 5 [(tagger.tags) = "json:\"description\""];
        int32 count = 6  [(tagger.tags) = "json:\"count\""];
        int32 max_num = 7 [(tagger.tags) = "json:\"max_num\""];
        bool is_member = 8 [(tagger.tags) = "json:\"is_member\""];
        string created_at = 9 [(tagger.tags) = "json:\"created_at\""];
    }

    repeated Item items = 1 [(tagger.tags) = "json:\"items\""];
    bool next = 2 [(tagger.tags) = "json:\"next\""];
}
